design: significantly improve careers page with premium layout and vision sections

--- a/careers.html
+++ b/careers.html
@@ -63,56 +63,210 @@
     </header>
 
     <main style="padding-top: 140px; min-height: 80vh;">
-        <section class="container" style="max-width: 1000px; text-align: center; padding: 80px 20px;">
+        <!-- Hero Section -->
+        <section class="container" style="max-width: 1100px; text-align: center; padding: 40px 20px 100px;">
             <nav class="breadcrumbs" style="justify-content: center;">
                 <a href="/index.html">Home</a>
                 <span class="separator">/</span>
                 <span class="current">Careers</span>
             </nav>
-            <span class="badge">Careers</span>
-            <h1
-                style="font-size: 56px; margin: 24px 0; background: linear-gradient(135deg, #fff 0%, var(--primary) 100%); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;">
-                Build the Future of <span class="text-highlight">Influence</span></h1>
-            <p class="lead" style="margin-bottom: 60px;">We're on a mission to map true authority and redefine how
-                influence is measured in the B2B era. Join us in building the world's most sophisticated semantic engine
-                for human authority.</p>
-
-            <div
-                style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 32px; margin-bottom: 80px; text-align: left;">
-                <div class="glass-dark"
-                    style="padding: 40px; border-radius: 24px; border-top: 1px solid rgba(0, 240, 255, 0.1);">
-                    <div style="font-size: 32px; margin-bottom: 20px;">🚀</div>
-                    <h3 style="font-size: 22px; margin-bottom: 16px; color: #fff;">Ambitious Mission</h3>
-                    <p style="color: var(--text-muted); line-height: 1.7;">We're solving one of the hardest problems in
-                        marketing: measuring what people actually think and who they actually trust.</p>
-                </div>
-
-                <div class="glass-dark"
-                    style="padding: 40px; border-radius: 24px; border-top: 1px solid rgba(0, 240, 255, 0.1);">
-                    <div style="font-size: 32px; margin-bottom: 20px;">🧠</div>
-                    <h3 style="font-size: 22px; margin-bottom: 16px; color: #fff;">Intellectual Rigor</h3>
-                    <p style="color: var(--text-muted); line-height: 1.7;">Work at the intersection of graph theory,
-                        LLMs, and social dynamics. We value depth over vanity metrics.</p>
-                </div>
-
-                <div class="glass-dark"
-                    style="padding: 40px; border-radius: 24px; border-top: 1px solid rgba(0, 240, 255, 0.1);">
-                    <div style="font-size: 32px; margin-bottom: 20px;">🌍</div>
-                    <h3 style="font-size: 22px; margin-bottom: 16px; color: #fff;">Remote First</h3>
-                    <p style="color: var(--text-muted); line-height: 1.7;">We're a global team of experts working
-                        asynchronously. We care about impact, not hours spent at a desk.</p>
-                </div>
+            <div style="margin-top: 32px;">
+                <span class="badge" style="letter-spacing: 2px;">JOIN THE ELITE</span>
+                <h1
+                    style="font-size: clamp(48px, 8vw, 72px); line-height: 1.1; margin: 24px 0; background: linear-gradient(135deg, #fff 0%, var(--primary) 100%); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent; font-weight: 700; letter-spacing: -0.02em;">
+                    Engineers of <br><span class="text-highlight">Human Authority</span>
+                </h1>
+                <p class="lead"
+                    style="max-width: 700px; margin: 0 auto 60px; font-size: 20px; color: var(--text-muted); line-height: 1.6;">
+                    NYRA is building the intelligence layer for the B2B world. We’re looking for specialists who want to
+                    solve the most complex graph and semantic problems in existence.
+                </p>
             </div>
 
+            <!-- Value Cards -->
+            <div
+                style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 32px; text-align: left; margin-top: 80px;">
+                <div class="glass-dark"
+                    style="padding: 48px 40px; border-radius: 28px; border: 1px solid rgba(255, 255, 255, 0.05); position: relative; overflow: hidden; height: 100%;">
+                    <div
+                        style="position: absolute; top: -20px; right: -20px; font-size: 120px; opacity: 0.03; font-weight: 800; color: #fff;">
+                        01</div>
+                    <div
+                        style="width: 48px; height: 48px; background: rgba(0, 240, 255, 0.1); border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-bottom: 32px; color: var(--primary); font-size: 24px;">
+                        🚀</div>
+                    <h3 style="font-size: 24px; color: #fff; margin-bottom: 20px; font-weight: 600;">The Mission</h3>
+                    <p style="color: var(--text-muted); line-height: 1.8; font-size: 15px;">We're moving beyond vanity
+                        metrics. We map the invisible threads of authority that govern B2B markets, creating the first
+                        objective truth for influence.</p>
+                </div>
+
+                <div class="glass-dark"
+                    style="padding: 48px 40px; border-radius: 28px; border: 1px solid rgba(255, 255, 255, 0.05); position: relative; overflow: hidden; height: 100%;">
+                    <div
+                        style="position: absolute; top: -20px; right: -20px; font-size: 120px; opacity: 0.03; font-weight: 800; color: #fff;">
+                        02</div>
+                    <div
+                        style="width: 48px; height: 48px; background: rgba(0, 240, 255, 0.1); border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-bottom: 32px; color: var(--primary); font-size: 24px;">
+                        🧠</div>
+                    <h3 style="font-size: 24px; color: #fff; margin-bottom: 20px; font-weight: 600;">The Stack</h3>
+                    <p style="color: var(--text-muted); line-height: 1.8; font-size: 15px;">Work with massive graph
+                        databases, custom LLM architectures for semantic analysis, and real-time data pipelines that
+                        process millions of interactions.</p>
+                </div>
+
+                <div class="glass-dark"
+                    style="padding: 48px 40px; border-radius: 28px; border: 1px solid rgba(255, 255, 255, 0.05); position: relative; overflow: hidden; height: 100%;">
+                    <div
+                        style="position: absolute; top: -20px; right: -20px; font-size: 120px; opacity: 0.03; font-weight: 800; color: #fff;">
+                        03</div>
+                    <div
+                        style="width: 48px; height: 48px; background: rgba(0, 240, 255, 0.1); border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-bottom: 32px; color: var(--primary); font-size: 24px;">
+                        🌍</div>
+                    <h3 style="font-size: 24px; color: #fff; margin-bottom: 20px; font-weight: 600;">The Culture</h3>
+                    <p style="color: var(--text-muted); line-height: 1.8; font-size: 15px;">Remote-native, asynchronous,
+                        and radically transparent. We measure performance by the elegance and impact of your solutions.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Vision Section -->
+        <section
+            style="background: rgba(0, 240, 255, 0.02); border-top: 1px solid rgba(255, 255, 255, 0.05); border-bottom: 1px solid rgba(255, 255, 255, 0.05); padding: 120px 0;">
+            <div class="container"
+                style="display: grid; grid-template-columns: 1fr 1fr; gap: 80px; align-items: center;">
+                <div style="position: relative;">
+                    <div
+                        style="position: absolute; width: 400px; height: 400px; background: radial-gradient(circle, rgba(112, 0, 255, 0.1) 0%, transparent 70%); top: 50%; left: 50%; transform: translate(-50%, -50%); filter: blur(40px);">
+                    </div>
+                    <div class="glass-dark" style="padding: 40px; border-radius: 24px; position: relative; z-index: 1;">
+                        <code style="color: var(--primary); font-family: 'JetBrains Mono', monospace; font-size: 13px;">
+                            authority_graph.query({<br>
+                            &nbsp;&nbsp;entity: "B2B_SaaS",<br>
+                            &nbsp;&nbsp;mode: "semantic_influence",<br>
+                            &nbsp;&nbsp;filter: { trust_score > 0.92 }<br>
+                            })
+                        </code>
+                        <div style="margin-top: 24px; border-top: 1px solid rgba(255,255,255,0.05); padding-top: 24px;">
+                            <div style="display: flex; gap: 8px; margin-bottom: 12px;">
+                                <div
+                                    style="width: 8px; height: 8px; border-radius: 50%; background: #00f0ff; box-shadow: 0 0 10px #00f0ff;">
+                                </div>
+                                <div
+                                    style="width: 8px; height: 8px; border-radius: 50%; background: #00f0ff; opacity: 0.3;">
+                                </div>
+                                <div
+                                    style="width: 8px; height: 8px; border-radius: 50%; background: #00f0ff; opacity: 0.1;">
+                                </div>
+                            </div>
+                            <p
+                                style="font-size: 14px; color: var(--text-muted); font-family: 'Space Grotesk', sans-serif;">
+                                Predicting network outcomes before they happens.</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <span class="badge"
+                        style="background: rgba(255,255,255,0.05); color: #fff; border: 1px solid rgba(255,255,255,0.1);">OUR
+                        IMPACT</span>
+                    <h2 style="font-size: 42px; margin: 24px 0; color: #fff;">We're mapping the <br>Graph of Everything.
+                    </h2>
+                    <p style="color: var(--text-muted); font-size: 18px; line-height: 1.7; margin-bottom: 32px;">The
+                        next generation of B2B decisions won't be made based on follower counts. They'll be made based
+                        on semantic authority. We're the ones building that codebase.</p>
+                    <ul style="list-style: none; padding: 0;">
+                        <li style="display: flex; align-items: center; gap: 12px; margin-bottom: 16px; color: #fff;">
+                            <div
+                                style="width: 20px; height: 20px; background: rgba(0, 240, 255, 0.2); border-radius: 50%; display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 12px;">
+                                ✓</div>
+                            <span>Proprietary Graph Theory Models</span>
+                        </li>
+                        <li style="display: flex; align-items: center; gap: 12px; margin-bottom: 16px; color: #fff;">
+                            <div
+                                style="width: 20px; height: 20px; background: rgba(0, 240, 255, 0.2); border-radius: 50%; display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 12px;">
+                                ✓</div>
+                            <span>Global Scale Infrastructure</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Technical Excellence / Pillars -->
+        <section class="container" style="padding: 100px 20px;">
+            <div style="text-align: left; margin-bottom: 60px;">
+                <h2 style="font-size: 32px; color: #fff; margin-bottom: 20px;">Technical Excellence</h2>
+                <div style="width: 60px; height: 3px; background: var(--primary); border-radius: 2px;"></div>
+            </div>
+
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 40px;">
+                <div>
+                    <h4
+                        style="color: #fff; font-size: 18px; margin-bottom: 12px; font-family: 'JetBrains Mono', monospace; font-weight: 500;">
+                        01. Semantic Graphs</h4>
+                    <p style="color: var(--text-muted); font-size: 14px; line-height: 1.6;">We don't just store data; we
+                        store relationships. Our graph architecture is built to understand the nuance between
+                        "following" and "trusting."</p>
+                </div>
+                <div>
+                    <h4
+                        style="color: #fff; font-size: 18px; margin-bottom: 12px; font-family: 'JetBrains Mono', monospace; font-weight: 500;">
+                        02. Probabilistic ROI</h4>
+                    <p style="color: var(--text-muted); font-size: 14px; line-height: 1.6;">Our algorithms forecast
+                        outcomes using Bayesian networks. We're turning marketing into a predictable engineering
+                        discipline.</p>
+                </div>
+                <div>
+                    <h4
+                        style="color: #fff; font-size: 18px; margin-bottom: 12px; font-family: 'JetBrains Mono', monospace; font-weight: 500;">
+                        03. Neural Analysis</h4>
+                    <p style="color: var(--text-muted); font-size: 14px; line-height: 1.6;">We use custom fine-tuned
+                        models to analyze the sentiment and authority of specialized B2B content across multiple
+                        platforms.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Current Openings / Speculative Application -->
+        <section class="container" style="padding: 120px 20px;">
             <div class="glass-dark"
-                style="padding: 80px 40px; border-radius: 32px; border: 1px dashed rgba(255, 255, 255, 0.1); background: rgba(5, 5, 10, 0.4);">
-                <div style="font-size: 48px; margin-bottom: 24px;">🏢</div>
-                <h2 style="font-size: 32px; margin-bottom: 16px; color: #fff;">Current Openings</h2>
-                <p style="color: var(--text-muted); font-size: 18px; margin-bottom: 40px;">We don't have any open
-                    positions at the moment, but we're always looking for exceptional talent.</p>
-                <p style="color: var(--text-muted);">Are you a specialist in Graph Data, NLP, or B2B influence? <br>
-                    Reach out to us at <a href="mailto:careers@usenyra.com"
-                        style="color: var(--primary); text-decoration: none;">careers@usenyra.com</a></p>
+                style="padding: 100px 40px; border-radius: 48px; text-align: center; border: 1px solid rgba(0, 240, 255, 0.1); position: relative; overflow: hidden; background: radial-gradient(circle at bottom right, rgba(0, 240, 255, 0.03), transparent 70%);">
+                <div
+                    style="position: absolute; top: 0; left: 0; width: 100%; height: 1px; background: linear-gradient(90deg, transparent, rgba(0, 240, 255, 0.4), transparent);">
+                </div>
+
+                <span class="badge" style="margin-bottom: 32px;">ENROLLMENT</span>
+                <h2 style="font-size: 40px; color: #fff; margin-bottom: 24px; font-weight: 700;">Join the <span
+                        class="text-highlight">Alpha Program</span></h2>
+                <p
+                    style="color: var(--text-muted); font-size: 18px; max-width: 600px; margin: 0 auto 48px; line-height: 1.6;">
+                    Even when we aren’t hiring, we’re building a network of the world’s best authority analysts. Submit
+                    your speculative application to enter our talent graph.
+                </p>
+
+                <a href="mailto:careers@usenyra.com" class="btn btn-primary"
+                    style="padding: 18px 56px; font-size: 16px; border-radius: 12px; display: inline-flex;">
+                    Send Your CV →
+                </a>
+
+                <div
+                    style="margin-top: 80px; display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 30px; border-top: 1px solid rgba(255,255,255,0.05); padding-top: 40px;">
+                    <div style="text-align: center;">
+                        <span
+                            style="display: block; font-family: 'JetBrains Mono', monospace; font-size: 11px; color: var(--primary); margin-bottom: 8px; text-transform: uppercase; letter-spacing: 2px;">Focus</span>
+                        <span style="color: #fff; font-size: 14px; font-weight: 500;">Stealth Operations</span>
+                    </div>
+                    <div style="text-align: center;">
+                        <span
+                            style="display: block; font-family: 'JetBrains Mono', monospace; font-size: 11px; color: var(--primary); margin-bottom: 8px; text-transform: uppercase; letter-spacing: 2px;">Philosophy</span>
+                        <span style="color: #fff; font-size: 14px; font-weight: 500;">Depth > Noise</span>
+                    </div>
+                    <div style="text-align: center;">
+                        <span
+                            style="display: block; font-family: 'JetBrains Mono', monospace; font-size: 11px; color: var(--primary); margin-bottom: 8px; text-transform: uppercase; letter-spacing: 2px;">Requirement</span>
+                        <span style="color: #fff; font-size: 14px; font-weight: 500;">Top 1% Global</span>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
