style: refine careers page text and remove requirement block

--- a/careers.html
+++ b/careers.html
@@ -71,7 +71,7 @@
                 <span class="current">Careers</span>
             </nav>
             <div style="margin-top: 32px;">
-                <span class="badge" style="letter-spacing: 2px;">JOIN THE ELITE</span>
+                <span class="badge" style="letter-spacing: 2px;">JOIN US</span>
                 <h1
                     style="font-size: clamp(48px, 8vw, 72px); line-height: 1.1; margin: 24px 0; background: linear-gradient(135deg, #fff 0%, var(--primary) 100%); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent; font-weight: 700; letter-spacing: -0.02em;">
                     Engineers of <br><span class="text-highlight">Human Authority</span>
@@ -261,11 +261,7 @@
                             style="display: block; font-family: 'JetBrains Mono', monospace; font-size: 11px; color: var(--primary); margin-bottom: 8px; text-transform: uppercase; letter-spacing: 2px;">Philosophy</span>
                         <span style="color: #fff; font-size: 14px; font-weight: 500;">Depth > Noise</span>
                     </div>
-                    <div style="text-align: center;">
-                        <span
-                            style="display: block; font-family: 'JetBrains Mono', monospace; font-size: 11px; color: var(--primary); margin-bottom: 8px; text-transform: uppercase; letter-spacing: 2px;">Requirement</span>
-                        <span style="color: #fff; font-size: 14px; font-weight: 500;">Top 1% Global</span>
-                    </div>
+
                 </div>
             </div>
         </section>
