--- a/careers.html
+++ b/careers.html
@@ -261,6 +261,11 @@
                             style="display: block; font-family: 'JetBrains Mono', monospace; font-size: 11px; color: var(--primary); margin-bottom: 8px; text-transform: uppercase; letter-spacing: 2px;">Philosophy</span>
                         <span style="color: #fff; font-size: 14px; font-weight: 500;">Depth > Noise</span>
                     </div>
+                    <div style="text-align: center;">
+                        <span
+                            style="display: block; font-family: 'JetBrains Mono', monospace; font-size: 11px; color: var(--primary); margin-bottom: 8px; text-transform: uppercase; letter-spacing: 2px;">DNA</span>
+                        <span style="color: #fff; font-size: 14px; font-weight: 500;">Extreme Proactivity</span>
+                    </div>
 
                 </div>
             </div>
