Fix industry section animation and mobile grid layout

--- a/insights.html
+++ b/insights.html
@@ -31,26 +31,75 @@
                     <a href="/#solutions" class="nav-link-with-dropdown">Solutions <span
                             class="dropdown-arrow">▼</span></a>
                     <div class="mega-menu">
-                        <div class="mega-menu-content">
-                            <div class="mega-menu-section">
-                                <h4>Products</h4>
-                                <a href="/index.html" class="mega-menu-item">
-                                    <strong>NYRA Influence Intelligence</strong>
-                                    <p>Powered by The Authority Graph™</p>
-                                </a>
-                                <a href="/api.html" class="mega-menu-item">
-                                    <strong>NYRA API</strong>
-                                    <span class="coming-soon-badge">Coming Soon</span>
-                                    <p>Integrate influence intelligence into your platform</p>
-                                </a>
+                        <div class="mega-menu-banner">
+                            ✨ New: <span>Authority Graph™ 2.0 is now live.</span> <a href="/#news"
+                                style="color: var(--primary); margin-left: 8px;">Explore the engine &rarr;</a>
+                        </div>
+                        <div class="mega-menu-container">
+                            <aside class="mega-menu-sidebar">
+                                <div class="sidebar-category">Solutions</div>
+                                <div class="sidebar-item active">Intel Engine <i>&rarr;</i></div>
+                                <div class="sidebar-item">API & Dev <i>&rarr;</i></div>
+                                <div class="sidebar-item">Insights <i>&rarr;</i></div>
+                                <div class="sidebar-item">Partnerships <i>&rarr;</i></div>
+                            </aside>
+
+                            <div class="mega-menu-grid-content">
+                                <div class="grid-header">
+                                    <h4>Capabilities</h4>
+                                </div>
+                                <div class="grid-items">
+                                    <div class="grid-item">
+                                        <div class="grid-item-icon">🔍</div>
+                                        <div class="grid-item-text">
+                                            <h5>Semantic Search</h5>
+                                            <p>Find experts by intent, not just keywords.</p>
+                                        </div>
+                                    </div>
+                                    <div class="grid-item">
+                                        <div class="grid-item-icon">📈</div>
+                                        <div class="grid-item-text">
+                                            <h5>Impact Prediction</h5>
+                                            <p>Forecast reach and conversion metrics.</p>
+                                        </div>
+                                    </div>
+                                    <div class="grid-item">
+                                        <div class="grid-item-icon">🛡️</div>
+                                        <div class="grid-item-text">
+                                            <h5>Pricing Guard</h5>
+                                            <p>Eliminate overpayment with data-backed value.</p>
+                                        </div>
+                                    </div>
+                                    <div class="grid-item">
+                                        <div class="grid-item-icon">🕸️</div>
+                                        <div class="grid-item-text">
+                                            <h5>Network Mapping</h5>
+                                            <p>Visualize clusters of true influence.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <button class="mega-menu-explore-btn">Explore All Capabilities</button>
                             </div>
-                            <div class="mega-menu-section">
-                                <h4>Services</h4>
-                                <a href="/insights.html" class="mega-menu-item">
-                                    <strong>Insights</strong>
-                                    <p>Monitoring, reporting & competitive intelligence</p>
-                                </a>
+
+                            <div class="mega-menu-featured">
+                                <div class="featured-card">
+                                    <div class="featured-image">🚀</div>
+                                    <h6>NYRA Alpha Program</h6>
+                                    <p>Join the elite circle of authority analysts and early adopters.</p>
+                                    <a href="/careers.html" class="learn-more-link">Learn more &rarr;</a>
+                                </div>
                             </div>
+                        </div>
+                        <div class="mega-menu-footer">
+                            <a href="/#signup" class="footer-action">
+                                <i>📅</i> Book your demo
+                            </a>
+                            <a href="/#signup" class="footer-action">
+                                <i>⚡</i> Start your free trial
+                            </a>
+                            <a href="/api.html" class="footer-action">
+                                <i>📖</i> Take a product tour
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -62,7 +111,7 @@
         </div>
     </header>
 
-    <main style="padding-top: 140px;">
+    <main>
         <!-- Hero Section -->
         <section class="container" style="max-width: 1000px; text-align: center; padding: 60px 20px 80px;">
             <nav class="breadcrumbs" style="justify-content: center;">
@@ -357,6 +406,17 @@
                     <div style="display: flex; gap: 16px; justify-content: center; flex-wrap: wrap;">
                         <a href="/contact.html" class="btn btn-primary" style="font-size: 16px;">Get Started →</a>
                         <a href="/#signup" class="btn btn-secondary" style="font-size: 16px;">Join Waitlist</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- PRE-FOOTER REVEAL -->
+        <section class="pre-footer-reveal">
+            <div class="container quote-container">
+                <div class="quote-reveal-card">
+                    <h2>Insights powered by <span class="text-highlight">Authority</span></h2>
+                    <div class="cta-reveal-group">
+                        <a href="/contact.html" class="btn btn-primary btn-large">Get Started &rarr;</a>
                     </div>
                 </div>
             </div>
