Add Login link to navigation bar

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                 <a href="#signup" class="btn btn-primary btn-nav mobile-only-cta">Join Waitlist</a>
             </nav>
             <div class="nav-right">
+                <a href="https://nyra-webservice-dev-kxi49.ondigitalocean.app/login" class="nav-link-login">Login</a>
                 <a href="#signup" class="btn btn-primary btn-nav desktop-only-cta">Join Waitlist</a>
                 <button class="mobile-menu-btn" aria-label="Toggle Navigation Menu">
                     <span class="bar"></span>
