--- a/careers.html
+++ b/careers.html
@@ -107,7 +107,11 @@
                 <a href="/#faq">FAQ</a>
                 <a href="/contact.html">Contact</a>
             </nav>
-            <a href="/#signup" class="btn btn-primary btn-nav">Join Waitlist</a>
+            <div class="nav-right" style="display: flex; align-items: center; gap: 24px;">
+                <a href="https://nyra-webservice-dev-kxi49.ondigitalocean.app/login" class="nav-link-login"
+                    style="font-size: 14px; font-weight: 500; color: var(--text-muted); font-family: 'Space Grotesk', sans-serif;">Login</a>
+                <a href="/#signup" class="btn btn-primary btn-nav">Join Waitlist</a>
+            </div>
         </div>
     </header>
 
