Update login link to open in new tab

--- a/careers.html
+++ b/careers.html
@@ -108,7 +108,8 @@
                 <a href="/contact.html">Contact</a>
             </nav>
             <div class="nav-right" style="display: flex; align-items: center; gap: 24px;">
-                <a href="https://nyra-webservice-dev-kxi49.ondigitalocean.app/login" class="nav-link-login"
+                <a href="https://nyra-webservice-dev-kxi49.ondigitalocean.app/login" target="_blank"
+                    rel="noopener noreferrer" class="nav-link-login"
                     style="font-size: 14px; font-weight: 500; color: var(--text-muted); font-family: 'Space Grotesk', sans-serif;">Login</a>
                 <a href="/#signup" class="btn btn-primary btn-nav">Join Waitlist</a>
             </div>
