Update all pages with Login link, correct Use Cases link, and mobile menu support. Fix Vite build config.

--- a/careers.html
+++ b/careers.html
@@ -28,11 +28,11 @@
             </a>
             <nav class="nav-links">
                 <div class="nav-item-dropdown">
-                    <a href="/#solutions" class="nav-link-with-dropdown">Solutions <span
-                            class="dropdown-arrow">▼</span></a>
+                    <button class="nav-link-with-dropdown mobile-dropdown-btn" aria-expanded="false">Solutions <span
+                            class="dropdown-arrow">▼</span></button>
                     <div class="mega-menu">
                         <div class="mega-menu-banner">
-                            ✨ New: <span>Authority Graph™ 2.0 is now live.</span> <a href="/#news"
+                            ✨ New: <span>Authority Graph™ 2.0 is now live.</span> <a href="/index.html#news"
                                 style="color: var(--primary); margin-left: 8px;">Explore the engine &rarr;</a>
                         </div>
                         <div class="mega-menu-container">
@@ -91,10 +91,10 @@
                             </div>
                         </div>
                         <div class="mega-menu-footer">
-                            <a href="/#signup" class="footer-action">
+                            <a href="/index.html#signup" class="footer-action">
                                 <i>📅</i> Book your demo
                             </a>
-                            <a href="/#signup" class="footer-action">
+                            <a href="/index.html#signup" class="footer-action">
                                 <i>⚡</i> Start your free trial
                             </a>
                             <a href="/api.html" class="footer-action">
@@ -103,15 +103,19 @@
                         </div>
                     </div>
                 </div>
-                <a href="/#use-cases">Use Cases</a>
-                <a href="/#faq">FAQ</a>
+                <a href="/use-cases.html">Use Cases</a>
+                <a href="/index.html#faq">FAQ</a>
                 <a href="/contact.html">Contact</a>
             </nav>
-            <div class="nav-right" style="display: flex; align-items: center; gap: 24px;">
+            <div class="nav-right">
                 <a href="https://nyra-webservice-dev-kxi49.ondigitalocean.app/login" target="_blank"
-                    rel="noopener noreferrer" class="nav-link-login"
-                    style="font-size: 14px; font-weight: 500; color: var(--text-muted); font-family: 'Space Grotesk', sans-serif;">Login</a>
-                <a href="/#signup" class="btn btn-primary btn-nav">Join Waitlist</a>
+                    rel="noopener noreferrer" class="nav-link-login">Login</a>
+                <a href="/index.html#signup" class="btn btn-primary btn-nav desktop-only-cta">Join Waitlist</a>
+                <button class="mobile-menu-btn" aria-label="Toggle Navigation Menu">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </button>
             </div>
         </div>
     </header>
@@ -358,9 +362,9 @@
                 <div class="footer-nav">
                     <div class="nav-col">
                         <h4>Product</h4>
-                        <a href="/#solutions">Features</a>
-                        <a href="/api.html">API</a>
-                        <a href="/insights.html">Insights</a>
+                        <a href="/index.html#solutions">Features</a>
+                        <a href="/use-cases.html">Use Cases</a>
+                        <a href="/api.html">API Access</a>
                     </div>
                     <div class="nav-col">
                         <h4>Company</h4>
