--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#use-cases">Use Cases</a>
+                <a href="use-cases.html">Use Cases</a>
                 <a href="#faq">FAQ</a>
                 <a href="contact.html">Contact</a>
                 <a href="#signup" class="btn btn-primary btn-nav mobile-only-cta">Join Waitlist</a>
@@ -718,9 +718,8 @@
                     <div class="nav-col">
                         <h4>Product</h4>
                         <a href="#solutions">Features</a>
-                        <a href="#industries">Industries</a>
-                        <a href="#">Authority Graph</a>
-                        <a href="#">API Access</a>
+                        <a href="/use-cases.html">Use Cases</a>
+                        <a href="/api.html">API Access</a>
                     </div>
                     <div class="nav-col">
                         <h4>Company</h4>
